--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/geist": "^5.2.8",
+    "@fontsource/geist-mono": "^5.2.7",
     "astro": "^5.17.1"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.90",
     "@unocss/astro": "^66.6.0",
-    "unocss": "^66.6.0"
+    "unocss": "^66.6.0",
+    "unplugin-icons": "^23.0.1"
   }
 }
