--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
@@ -15,6 +14,7 @@
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.90",
+    "@types/bun": "^1.3.9",
     "@unocss/astro": "^66.6.0",
     "unocss": "^66.6.0",
     "unplugin-icons": "^23.0.1"
